<resources>
    <string name="app_name">Sample App</string>
    <string name="login">Log In</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="gotham_font">fonts/GothamRoundedLight.ttf</string>
    <string name="gotham_medium">fonts/GothamRoundedMedium.ttf</string>
</resources>
