<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.iriras.sampleapp.MainActivity"
    tools:ignore="MissingPrefix">

    <TextView
        fontPath="@string/gotham_font"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blueFacebook"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="12dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:src="@mipmap/img_facebook" />

        <TextView
            fontPath="@string/gotham_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_in_with_facebook"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        fontPath="@string/gotham_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:minHeight="36dp"
        android:text="or"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="@dimen/activity_horizontal_margin"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_user" />

        <EditText
            fontPath="@string/gotham_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="@dimen/activity_horizontal_margin"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_password" />

        <EditText
            fontPath="@string/gotham_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        fontPath="@string/gotham_medium"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/greenSpotify"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        fontPath="@string/gotham_font"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="Forgot your password?"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="10sp" />
</LinearLayout>
